--- a/package.json
+++ b/package.json
@@ -1,13 +1,35 @@
 {
   "name": "rc-mqtt",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "private": false,
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/rc-mqtt.js",
+      "require": "./dist/rc-mqtt.umd.cjs"
+    }
+  },
+  "main": "./dist/rc-mqtt.umd.cjs",
+  "module": "./dist/rc-mqtt.js",
+  "typings": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
+    "format": "prettier --cache --write .",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": "npm run lint",
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+      "prettier --write"
+    ]
+  },
+  "dependencies": {
+    "mqtt": "^5.5.5",
+    "mqtt-pattern": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -18,9 +40,18 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.0",
+    "prettier": "^2.8.7",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-packagejson": "^2.4.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
+  },
+  "peerDependencies": {
+    "react": ">=18.1.0",
+    "react-dom": ">=18.1.0"
   }
 }
